--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -48,10 +48,10 @@ header,
 
     background-color: $light-pink;
 
-    background-image: url('../storage/img/sfondo-pollo.png');
+    /* background-image: url('../storage/img/sfondo-pollo.png');
     background-size: contain;
-    background-position: left;
-    background-repeat: no-repeat;
+    background-position: right;
+    background-repeat: no-repeat; */
 }
 
 .card {
