--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -47,7 +47,7 @@ header,
 .back_image {
 
     background-color: $light-pink;
-    margin-left: -1px;
+    // margin-left: -1px;
 
     /* background-image: url('../storage/img/sfondo-pollo.png');
     background-size: contain;
